# briefler

./: .env.example  .gitignore  README.md  pyproject.toml
.kiro/hooks/: run-all-tests.kiro.hook
.kiro/specs/2-crewai-structure-conversion/: design.md  tasks.md
.kiro/specs/3-enhanced-crew-input-parameters/: requirements.md
.kiro/specs/4-tool-migration/: design.md  tasks.md
.kiro/specs/5-email-content-filtering/: design.md  tasks.md
.kiro/specs/6-fastapi-backend/: design.md  tasks.md
.kiro/specs/7-image-text-extraction/: design.md  tasks.md
.kiro/specs/8-structured-task-outputs/: design.md  requirements.md  tasks.md
.kiro/specs/crewai-structure-conversion/: design.md  requirements.md  tasks.md
.kiro/specs/email-content-filtering/: requirements.md
.kiro/specs/fastapi-backend/: requirements.md
.kiro/steering/: product.md  structure.md  tech.md
data/history/: .gitkeep  e49c5b9a-d168-48cb-a108-fd7b59e92853.json
examples/: README.md  api_structured_output_example.py  gmail_crew_example.py  gmail_image_extraction_example.py  gmail_reader_example.py  structured_output_example.py
src/api/: README.md  __init__.py  main.py
src/briefler/: main.py
tests/: README.md  __init__.py  conftest.py
tests/api/: test_cors.py  test_error_handling.py  test_flows_post.py  test_flows_stream.py  test_health.py  test_history.py  test_structured_responses.py
tests/crews/: __init__.py  test_gmail_reader_crew_integration.py
tests/flows/: __init__.py  test_error_handling.py  test_gmail_read_flow_structured_outputs.py
tests/models/: test_task_outputs.py
tests/tools/: test_gmail_reader_tool_integration.py  test_image_extractor_error_handling.py  test_image_extractor_integration.py
(+33 files in other folders)
